@@ -77,7 +77,7 @@
 							<maxIdleTime>60000</maxIdleTime>
 						</connector>
 					</connectors>
-                    <jvmArgs>-Xms512m -Xmx4096m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled</jvmArgs>
+                    <jvmArgs>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx2048m -XX:+CMSClassUnloadingEnabled</jvmArgs>
 				</configuration>
 			</plugin>
 		</plugins>
